--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
     "@react-google-maps/api": "^2.20.6",
+    "axios": "^1.9.0",
     "formik": "^2.4.6",
     "i": "^0.3.7",
+    "i18next": "^25.2.0",
+    "i18next-browser-languagedetector": "^8.1.0",
     "npm": "^11.4.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "redux": "^5.0.1"
